force-app/main/default/objects/Fleet_Change_Source__mdt/Fleet_Change_Source__mdt.object-meta.xml
<CustomObject>
    <label>Fleet Change Source</label>
    <pluralLabel>Fleet Change Sources</pluralLabel>
</CustomObject>