force-app/main/default/objects/Fleet_Change_Source__mdt/fields/Correlation_Window_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Window_Minutes__c</fullName>
    <label>Correlation Window Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>