force-app/main/default/objects/Fleet_Change_Source__mdt/fields/Ingestion_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_Strategy__c</fullName>
    <label>Ingestion Strategy</label>
    <type>Text</type>
    <length>60</length>
</CustomField>