force-app/main/default/objects/Fleet_Change_Source__mdt/fields/Source_Key__c.field-meta.xml
<CustomField>
    <fullName>Source_Key__c</fullName>
    <label>Source Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>